# KB_BS_local-deep-researcher-he

./: IMPLEMENTATION_SUMMARY.md  README.md  implementation_status.md  pyproject.toml
apps/: app_v0_1g.py
dev/: debug_import.py  test_app_dependencies.py  test_final_fixes.py  test_graph_compilation.py  test_utils.py
docs/: KB_BS_local-deep-researcher-he_v0.1_SPEC.md  ideas.md
showroom/: IMPLEMENTATION.md  README.md  app.py  backend.py  debug_filesystem_tools.py  debug_full_graph.py  debug_identify_tools.py  debug_no_subagents.py  debug_ollama_tools.py  debug_subagent_tool.py  debug_tavily_direct.py  debug_tools_schema.py  ideas.md
src/: LLM_Choice.md  configuration.py  graph.py  logger.py  prompts.py  rag_helpers.py  state.py  tools.py  utils.py  vector_db.py
